examples/test/testpolicy18253.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18253
  namespace: namespace257
spec:
  podSelector:
    matchLabels:
      key44: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value23
      podSelector:
        matchLabels:
          key3: value7
          key23: value8
          key33: value17
